# litex-pac

./: Cargo.toml  README.md  seven.py  simon_mimas.py  simon_ulx3s.py
src/: lib.rs  lxservercmd  mimas.svd  palgen-cmd  soc-cmd  ulx3s.svd
